@@ -3,7 +3,7 @@ Section: misc
 Priority: extra
 Maintainer: Debian QEMU Team <pkg-qemu-devel@lists.alioth.debian.org>
 Uploaders: Steve Langasek <vorlon@debian.org>, Serge Hallyn <serge.hallyn@ubuntu.com>, dann frazier <dannf@debian.org>
-Build-Depends: debhelper (>= 8), uuid-dev, quilt, iasl, gcc-multilib [i386], nasm, python, gcc-aarch64-linux-gnu
+Build-Depends: debhelper (>= 8), uuid-dev, quilt, iasl, gcc-multilib [i386], nasm, python, gcc-aarch64-linux-gnu, gcc-arm-linux-gnueabihf
 Standards-Version: 3.9.8
 Homepage: http://www.tianocore.org
 Vcs-Git: git://git.debian.org/git/pkg-qemu/edk2.git
@@ -18,6 +18,13 @@ Description: UEFI firmware for 64-bit x86 virtual machines
  Open Virtual Machine Firmware is a build of EDK II for 64-bit x86 virtual
  machines. It includes full support for UEFI, including Secure Boot, allowing
  use of UEFI in place of a traditional BIOS in your VM.
+
+Package: qemu-efi-arm
+Architecture: all
+Depends: ${misc:Depends}
+Description: UEFI firmware for 32-bit ARM virtual machines
+ qemu-efi-arm is a build of EDK II for 32-bit ARM virtual machines. It
+ includes full support for UEFI, including Secure Boot.
 
 Package: qemu-efi-aarch64
 Architecture: all
