@@ -1,0 +1,1 @@
+Build/ArmVirtQemu-ARM/RELEASE_*GCC*/FV/AAVMF32_*.fd /usr/share/AAVMF
