@@ -11,6 +11,7 @@ edk2 (0~20161202.7bbe0b3e-2) UNRELEASED; urgency=medium
   * Rename qemu-efi to qemu-efi-aarch64 to open the namespace for
     qemu-efi-arm. qemu-efi is now a transitional package with a compatibility
     symlink.
+  * Add qemu-efi-arm package. Closes: #857858.
 
  -- dann frazier <dannf@debian.org>  Thu, 06 Apr 2017 16:37:45 -0600
 
